--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,13 @@ plugins {
 
 group = 'com.bsa'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '14'
+sourceCompatibility = '11'
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
 
 repositories {
 	mavenCentral()
@@ -14,10 +20,13 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-json'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+	compile group: 'commons-io', name: 'commons-io', version: '2.6'
+	compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
 }
 
 test {
