--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,14 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-json'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	compile group: 'commons-io', name: 'commons-io', version: '2.6'
 	compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
+	compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
 }
 
 test {
