--- a/src/main/resources/prod.properties
+++ b/src/main/resources/prod.properties
@@ -1,5 +1,5 @@
 api.apiKey=
 api.url=https://api.giphy.com/v1/gifs/random
 
-data.cache-directory=cache
-data.users-directory=users
+data.cache-directory=localDB/cache
+data.users-directory=localDB/users
